--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -22,8 +22,10 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    sort_unnamed_constructors_first: true
+    sort_constructors_first: true
+    prefer_relative_imports: true  # Uncomment to enable the `prefer_single_quotes` rule
+    prefer_single_quotes: true 
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
