ci: :green_heart: configuracion deploy
coniguracion deploy con firebase

--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -13,13 +13,15 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-
       - name: Compilando flutter web
         run: |
           flutter config --enable-web
           flutter pub get
           flutter build web --release
       - name: Subida a firebase
-        run: |
-          sudo npm install -g firebase-tools
-          firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PORTAFOLIO_870C0 }}'
+          channelId: live
+          projectId: portafolio-870c0
