--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.5
   go_router: ^6.2.0
   url_strategy: ^0.2.0
+  firebase_core: ^2.8.0
 
 dev_dependencies:
   build_runner: ^2.3.3
