--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -18,7 +18,8 @@ jobs:
           flutter config --enable-web
           flutter pub get
           flutter build web --release
-    steps:
+    deploy:
+      steps:
       - name: Subida a firebase
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
