--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
-    "public": "public",
+    "site": "portafolio",
+    "public": "build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
