--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^6.0.5
   go_router: ^6.2.0
   url_strategy: ^0.2.0
   firebase_core: ^2.8.0
+  flutter_riverpod: ^2.3.2
 
 dev_dependencies:
   build_runner: ^2.3.3
