--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_strategy: ^0.2.0
   firebase_core: ^2.8.0
   flutter_riverpod: ^2.3.2
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   build_runner: ^2.3.3
