--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   go_router: ^6.2.0
   url_strategy: ^0.2.0
   firebase_core: ^2.8.0
-  flutter_riverpod: ^2.3.2
+  hooks_riverpod: ^2.3.2
   google_fonts: ^4.0.3
 
 dev_dependencies:
