--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.8.0
   hooks_riverpod: ^2.3.2
   google_fonts: ^4.0.3
+  flutter_hooks: ^0.18.6
 
 dev_dependencies:
   build_runner: ^2.3.3
