--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   freezed_annotation: ^2.2.0
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -42,11 +44,16 @@ dependencies:
   hooks_riverpod: ^2.3.2
   google_fonts: ^4.0.3
   flutter_hooks: ^0.18.6
+  slang: ^3.11.1
+  slang_flutter: ^3.11.0
+  intl: ^0.17.0
+
 
 dev_dependencies:
   build_runner: ^2.3.3
   freezed: ^2.3.2
   flutter_gen: ^5.2.0
+  slang_build_runner: ^3.11.0
   flutter_test:
     sdk: flutter
 
