--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
       "build_runner": "flutter pub run build_runner build",  
       "build_runner_d": "flutter pub run build_runner build --delete-conflicting-outputs",  
       "flutter_gen": "flutter pub run flutter_gen:flutter_gen_command",
+      "gen_idioma": "flutter pub run slang",
       "generar_assets (con flutter gen instalado en dart)":"fluttergen -c pubspec.yaml"  
     },
     "conventionalCommits.scopes": [
